# vox-machinae

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  DockerfileAdmin  DockerfileCustomer  DockerfileManager  README.md  TODO.md  admin_bot.py  customer_bot.py  main.py  manager_bot.py  pyproject.toml
app/: app_settings.py  initialize.py  settings.py
app/config/: http_client.py  log.py  pydantic.py
app/dialog/: admin.py  manager.py
app/dialog/customer/: image_from_text_model_prompt.py  main_menu.py  select_text_model_menu.py  text_model_prompt.py
app/dialog/manager/: access_menu.py  main_menu.py
app/middleware/: access.py  admin.py  database_session.py  filter_not_allowed.py  filter_not_text.py  text.py  user.py
app/model/: models.py
app/query/: user.py
app/route/: main.py  text.py
app/route/admin/: admin.py
app/route/customer/: start.py  text.py  text_model.py
app/schema/: openai.py
app/state/: customer.py  manager.py
app/util/: health_check.py  healthcheck.py  model_from_state.py  openai.py  other.py
app/util/dispatcher/: error_handler.py  initialize_admin.py  initialize_customer.py  initialize_manager.py  shared_initialize.py
app/util/handler/: allow_state.py  image_from_text_model.py  text_model.py
app/util/lifecycle/: lifecycle_functions.py  start.py
app/util/openai/: image_from_text_model.py  openai_stuff.py  send_request.py  text_model.py
app/util/settings/: customer.py  manager.py  shared.py
migrations/: env.py
migrations/versions/: 1075cfe14f9a_add_tokens_used.py  a55e2c970aad_initial.py  f66e52bcdbb5_add_username_and_full_name.py
