[project]
name = "vox_machinae"
version = "0.0.1"
description = ""
authors = [
    {name = "Sax Dhiut", email = "mail@iyxeyl.me"},
]
dependencies = [
    "aiogram==3.0.0b6",
    "aiohttp-healthcheck>=1.3.1",
    "openai>=0.26.4",
    "httpx>=0.23.3",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "setuptools>=65.6.3",
    "isort>=5.11.3",
    "wemake-python-styleguide>=0.17.0",
    "mypy>=0.991",
    "black>=22.12.0",
    "pre-commit>=2.20.0",
    "vulture>=2.7",
    "pytest>=7.2.1",
]


[tool.pdm.scripts]
start = "python main.py"

[tool.setuptools]
py-modules = []

[tool.mypy]
exclude = [".git", ".idea", ".mypy_cache", ".venv", ".vscode", ".migrations", "alembic"]
pretty = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_unreachable = true

[tool.isort]
profile = "black"

[tool.black]
exclude = [".git", ".idea", ".mypy_cache", ".venv", ".vscode", ".migrations", "alembic"]
line-length = 88

[tool.vulture]
exclude = [".git", ".idea", ".mypy_cache", ".venv", ".vscode", ".migrations", "alembic"]



